--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "db": "json-server --watch public/db.json --port 3001",
+    "lint": "next lint",
+    "prepare": "husky install",
+    "check": "eslint .",
+    "check:fix": "eslint . --fix",
+    "prettier": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\""
   },
   "dependencies": {
     "next": "15.4.1",
@@ -28,6 +33,7 @@
     "globals": "^16.3.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint": "^8.37.0"
+    "typescript-eslint": "^8.37.0",
+    "husky": "^8.0.0"
   }
 }
