--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.31.0",
     "@next/eslint-plugin-next": "^15.4.1",
@@ -31,9 +33,9 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
+    "husky": "^8.0.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint": "^8.37.0",
-    "husky": "^8.0.0"
+    "typescript-eslint": "^8.37.0"
   }
 }
