--- a/package.json
+++ b/package.json
@@ -6,18 +6,45 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "vercel": "vercel",
     "db": "json-server --watch public/db.json --port 3001",
     "lint": "next lint",
     "prepare": "husky install",
     "check": "eslint .",
     "check:fix": "eslint . --fix",
-    "prettier": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\""
+    "prettier": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\"",
+    "db:push": "drizzle-kit push",
+    "test:auth": "./scripts/test-auth.sh",
+    "dev:json": "USE_JSON_SERVER=true pnpm run dev",
+    "dev:db": "USE_JSON_SERVER=false pnpm run dev"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.10.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-table": "^8.21.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.4",
     "json-server": "1.0.0-beta.3",
+    "lucide-react": "^0.539.0",
     "next": "15.4.1",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.7.0",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -36,6 +63,7 @@
     "globals": "^16.3.0",
     "husky": "^8.0.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5",
     "typescript-eslint": "^8.37.0"
   }
